[package]
name = "ro-dispatcher"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.0"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
